--- a/src/shared/components/Modal/Modal.module.css
+++ b/src/shared/components/Modal/Modal.module.css
@@ -2,8 +2,10 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    right: 0;
+    bottom: 0;
+    width: 100ww;
+    height: 100wh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,6 +14,15 @@
 }
 
 .Modal {
-    max-width: calc(100vw - 48px);
-    max-height: calc(100vh - 24px);
+    position:relative;
+    max-width: calc(100ww - 48px);
+    max-height: calc(100wh - 24px);
+}
+
+.close {
+    position: absolute;
+    top:0;
+    left: 0;
+    cursor: pointer;
+    
 }
