--- a/src/shared/components/Modal/Modal.module.css
+++ b/src/shared/components/Modal/Modal.module.css
@@ -15,14 +15,16 @@
 
 .Modal {
     position:relative;
-    max-width: calc(100ww - 48px);
-    max-height: calc(100wh - 24px);
+    max-width: calc(100% - 48px);
+    max-height: calc(100% - 24px);
+    border-radius: 20px;
+    overflow: hidden;
 }
 
 .close {
     position: absolute;
-    top:0;
-    left: 0;
+    top: 20px;;
+    left: 20px;
     cursor: pointer;
     border-radius: 50%;
     width: 40px;
